--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-samba": "file:../cordova-plugin-samba",
     "cordova-plugin-vibration": "^3.1.1"
   },
@@ -25,6 +26,9 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-vibration": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-samba": {}
     },
     "platforms": [
