--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
-    "cordova-plugin-android-fingerprint-auth": "^1.5.0",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-fingerprint": "file:../cordova-plugin-fingerprint",
     "cordova-plugin-samba": "file:../cordova-plugin-samba",
     "cordova-plugin-vibration": "^3.1.1"
   },
@@ -30,8 +30,8 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-android-fingerprint-auth": {},
-      "cordova-plugin-samba": {}
+      "cordova-plugin-samba": {},
+      "cordova-plugin-fingerprint": {}
     },
     "platforms": [
       "browser",
