--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-fingerprint": "file:../cordova-plugin-fingerprint",
-    "cordova-plugin-samba": "file:../cordova-plugin-samba",
+    "cordova-plugin-samba": "git+https://github.com/seatwork/cordova-plugin-samba.git",
     "cordova-plugin-vibration": "^3.1.1"
   },
   "devDependencies": {
@@ -30,8 +30,8 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-samba": {},
-      "cordova-plugin-fingerprint": {}
+      "cordova-plugin-fingerprint": {},
+      "cordova-plugin-samba": {}
     },
     "platforms": [
       "browser",
